--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Starter Snowpack App" />
-    <!-- <link rel="stylesheet" type="text/css" href="/style/App.css" /> -->
-    <title>Starter Snowpack App</title>
+    <meta name="description" content="Secure message sharing application" />
+    <title>.envite - secure message sharing</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
